--- a/Praxisbericht.tex
+++ b/Praxisbericht.tex
@@ -13,7 +13,7 @@
 
 % ---- Persönlichen Daten:
 \newcommand{\titel}{Enhancing insights into spending through aggregation with automated document clustering of a large-scale multilingual corpus}
-\newcommand{\titelheader}{BA Lisa Schmidt}
+\newcommand{\titelheader}{ }
 \newcommand{\arbeit}{Bachelor Thesis}
 \newcommand{\studiengang}{Internationale Wirtschaftsinformatik}
 \newcommand{\studienjahr}{2019}
