--- a/Inhalt/03_Verzeichnisse/abkuerzungen.tex
+++ b/Inhalt/03_Verzeichnisse/abkuerzungen.tex
@@ -1,5 +1,5 @@
 \chapter*{List of Abbreviations}
-\addcontentsline{toc}{chapter}{Abkürzungsverzeichnis} % Hinzufügen zum Inhaltsverzeichnis 
+\addcontentsline{toc}{chapter}{List of Abbreviations} % Hinzufügen zum Inhaltsverzeichnis 
 
 \begin{acronym}[WYSISWG] % längstes Kürzel wird verw. für den Abstand zw. Kürzel u. Text
 
@@ -15,6 +15,7 @@
 	\acro{GIL}{Global Interpreter Lock}
 	\acro{JSON}{JavaScript Object Notation}
 	\acro{KDD}{Knowledge Discovery in Databases}
+	\acro{ML}{Machine Learning}
 	\acro{NLP}{Natural Language Processing}
 	\acro{NLTK}{Natural Language Toolkit}
 	\acro{SEMMA}{Sample Explore Modify Model Assess}
